MOTECH-1265: PermGen errors on server startup
Updated documentation with information about tomcat jvm MaxPermSize.

Change-Id: I16f1a2ce6840353211e6653bddd3986cd2f25f73